[package]
name = "risty-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = "0.10"
thiserror = "2"
risty-core = { path = "../risty-core" }
rand = { version = "0.8", features = ["std_rng"] }
